# oceanum-prax-cli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  modelgen.sh  pyproject.toml
.github/workflows/: build-and-test.yml  build-and-testt.yml  pypi-publish.yml
docs/: conf.py  index.rst  installation.rst  reference.rst  requirements.txt  usage.rst
src/oceanum/cli/prax/: TODO.md  __init__.py  client.py  main.py  models.py  pipeline.py  project.py  route.py  user.py  utils.py  workflows.py
tests/: conftest.py  test_main.py  test_project.py  test_route.py  test_user.py  test_workflows.py
