[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanum-prax"
description = "Command-line utility for Oceanum.io PRAX platform"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["oceanum", "datamesh", "oceanum.io", "prax", "ci/cd"]
authors = [
    { name = "Oceanum Developers", email = "developers@oceanum.science" },
]
maintainers = [
    { name = "Oceanum Developers", email = "developers@oceanum.science" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
  "click",
  "platformdirs",
  "pydantic[email]",
  "python-jsonpath<2.0.0",
  "requests",
  "tabulate",
  "humanize",
  "oceanum>=1.0.11"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]
dev = ["ruff", "pre-commit"]
modelgen = ["datamodel-code-generator[http]"]

[project.entry-points."oceanum.cli.extensions"]
"main" = "oceanum.cli.prax.main"
"project" = "oceanum.cli.prax.project"
"workflows" = "oceanum.cli.prax.workflows"
"route" = "oceanum.cli.prax.route"
"user" = "oceanum.cli.prax.user"
"client" = "oceanum.cli.prax.client"

[project.urls]
"Homepage" = "https://oceanum.io/"
"Source" = "https://github.com/oceanum-io/oceanum-run-cli"
"Documentation" = "https://oceanum-python.readthedocs.io/en/latest/"
"Tracker" = "https://github.com/oceanum-io/oceanum-run-cli/issues"

[project.entry-points."oceanum.cli"]
"prax" = "oceanum.cli.prax.main"

[project.entry-points."oceanum.cli.prax"]
"main" = "oceanum.cli.prax.main"
"project" = "oceanum.cli.prax.project"
"workflows" = "oceanum.cli.prax.workflows"
"route" = "oceanum.cli.prax.route"
"user" = "oceanum.cli.prax.user"
"client" = "oceanum.cli.prax.client"

[tool.setuptools.dynamic]
version = { attr = "oceanum.cli.prax.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]
include = ["oceanum.cli.prax*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.distutils.bdist_wheel]
universal = true

# Ruff configuration - Modern Python linter and formatter
[tool.ruff]
line-length = 88
target-version = "py310"

# Exclude auto-generated files and build artifacts
extend-exclude = [
    "src/oceanum/cli/prax/models.py",  # Auto-generated from OpenAPI
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
# Start with lenient rules - focus on clear errors and consistency
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
]

# Ignore rules that conflict with formatter or are too strict initially
ignore = [
    "E501",  # Line too long (let formatter handle line length)
    "E731",  # Lambda assignment (lenient - can be useful for inline functions)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F841",  # Unused variable (common in test fixtures/mocks)
]

# Sort imports automatically
[tool.ruff.lint.isort]
known-first-party = ["oceanum"]
combine-as-imports = true

# Formatter configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
